@@ -1,7 +1,11 @@
 <?xml version="1.0"?>
 <MerkaartorList>
  <Projections creator="Merkaartor 0.14" >
-  <Projection name="Mercator (epsg:3785)" >+proj=merc +lat_ts=0.0 +lon_0=0.0 +x_0=0.0 +y_0=0 +k=1.0 +ellps=WGS84 +datum=WGS84 +no_defs</Projection>
-  <Projection name="EPSG:4326" >+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs +to_meter=0.017453292519943295769236907684886</Projection>
+  <Projection name="Mercator (EPSG:3785)" >+proj=merc +lat_ts=0.0 +lon_0=0.0 +x_0=0.0 +y_0=0 +k=1.0 +ellps=WGS84 +datum=WGS84 +no_defs</Projection>
+  <Projection name="Mercator (EPSG:3785)" >+proj=merc +lat_ts=0.0 +lon_0=0.0 +x_0=0.0 +y_0=0 +k=1.0 +ellps=WGS84 +datum=WGS84 +no_defs</Projection>
+  <Projection name="Mercator (epsg:3785)" deleted="true" >+proj=merc +lat_ts=0.0 +lon_0=0.0 +x_0=0.0 +y_0=0 +k=1.0 +ellps=WGS84 +datum=WGS84 +no_defs</Projection>
+  <Projection name="EPSG:4326" deleted="true" >+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs +to_meter=0.017453292519943295769236907684886</Projection>
+  <Projection name="Latitude/Longitude (EPSG:4326)" >+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs +to_meter=0.017453292519943295769236907684886</Projection>
+  <Projection name="OSGB36 (EPSG:27700)">+proj=tmerc +lat_0=49 +lon_0=-2 +k=0.999601 +x_0=400000 +y_0=-100000 +ellps=airy +datum=OSGB36 +no_defs</Projection>
  </Projections>
 </MerkaartorList>
